[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utract-mcp"
version = "0.1.0"
description = "MCP server for Plane / utrack project management platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Danang Haris Setiawan" }
]
keywords = ["mcp", "plane", "utrack", "project-management", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-asyncio>=0.3.0",
    "myst-parser>=3.0.0",
    "twine>=5.0.0",
    "build>=1.0.0",
]

[project.scripts]
utract-mcp = "utract_mcp.server:main"

[project.urls]
Homepage = "https://github.com/danangharissetiawan/utract-mcp"
Documentation = "https://utract-mcp.readthedocs.io"
Repository = "https://github.com/danangharissetiawan/utract-mcp"
Issues = "https://github.com/danangharissetiawan/utract-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/utract_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.version]
path = "src/utract_mcp/__init__.py"
